--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "bevy_proto"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+bevy_proto_derive = { path = "bevy_proto_derive" }
 bevy = "0.5"
 serde = "1.0.130"
 typetag = "0.1"
