--- a/assets/prototypes/sprite_test.yaml
+++ b/assets/prototypes/sprite_test.yaml
@@ -1,7 +1,6 @@
 ---
-name: "Test Prototype"
+name: "Sprite Test"
 components:
   - type: SpriteBundleDef
     value:
       texture_path: "textures/sprite.png"
-      other_path: "foo"
