--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ exclude = ["assets/**/*", ".github/**/*"]
 
 [dependencies]
 bevy_proto_derive = { version = "0.1.0", path = "bevy_proto_derive" }
-bevy = "0.5"
+# bevy = "0.5"
+# bevy = { version = "0.5", default-features = false, path = "../bevy" }
+bevy = { version = "0.5", path = "../bevy" }
 serde = "1.0.130"
 typetag = "0.1"
 serde_yaml = "0.8"
