--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ serde_yaml = "0.8"
 dyn-clone = "1.0.4"
 indexmap = "1.7.0"
 
+[features]
+default = []
+no_cycles = []
+
 [badges]
 maintenance = { status = "experimental" }
 
