--- a/assets/prototypes/templates/urist.yaml
+++ b/assets/prototypes/templates/urist.yaml
@@ -1,11 +1,18 @@
 ---
 name: "Urist"
-template: "NPC"
+
+# Templates are applied in reverse order. So templates listed first override templates listed last.
+templates:
+  - Healthy
+  - NPC
+  -
+# Templates can also be listed inline:
+#   templates: [ Healthy, NPC ]
+# Or without brackets (deserialized as a comma-separated string):
+#   templates: Healthy, NPC
+
 components:
   - type: Named
     value: "Urist McTemplate"
   - type: Occupation
     value: Miner
-  - type: Health
-    value:
-      max: 30
