--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_proto"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Gino Valente <gino.valente.code@gmail.com>"]
 description = "Create config files for entities in Bevy"
@@ -12,9 +12,7 @@ exclude = ["assets/**/*", ".github/**/*"]
 
 [dependencies]
 bevy_proto_derive = { version = "0.1.0", path = "bevy_proto_derive" }
-# bevy = "0.6"
-# bevy = { version = "0.6", default-features = false, path = "../bevy" }
-bevy = { version = "0.6", path = "../bevy" }
+bevy = "0.6"
 serde = "1.0.130"
 typetag = "0.1"
 serde_yaml = "0.8"
