Added #[proto_comp(with=...)] and #[proto_comp(into=...)]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ name = "bundles"
 path = "examples/bundles.rs"
 
 [[example]]
+name = "attributes"
+path = "examples/attributes.rs"
+
+[[example]]
 name = "templates"
 path = "examples/templates.rs"
 
