--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_yaml = "0.8"
 dyn-clone = "1.0"
 indexmap = "1.7"
 anyhow = "1.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 bevy = { git = "https://github.com/MrGVSV/bevy", branch = "bevy_proto" }
