--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,21 +15,28 @@ bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
 bevy = { git = "https://github.com/MrGVSV/bevy", branch = "bevy_proto" }
 serde = "1.0"
 typetag = "0.1"
-serde_yaml = "0.8"
+serde_yaml = { version = "0.8", optional = true }
 dyn-clone = "1.0"
 indexmap = "1.7"
 anyhow = "1.0"
 thiserror = "1.0"
+parking_lot = "0.12"
+serde_ron = { version = "0.7", optional = true, package = "ron" }
+serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
 bevy = { git = "https://github.com/MrGVSV/bevy", branch = "bevy_proto" }
 
 [features]
-default = ["analysis"]
+default = ["analysis", "yaml"]
 # If enabled, analyses prototype dependencies and logging (or panicking if `no_cycles` is enabled) on error
 analysis = []
 # If enabled, panics when a dependency cycle is found, otherwise logs a warning
 no_cycles = ["analysis"]
+
+yaml = ["serde_yaml"]
+json = ["serde_json"]
+ron = ["serde_ron"]
 
 [[example]]
 name = "basic"
