--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,11 @@ ron = ["serde_ron"]
 name = "basic"
 path = "examples/basic.rs"
 
+# TODO: Remove me
+[[example]]
+name = "foo"
+path = "examples/foo.rs"
+
 [[example]]
 name = "bundles"
 path = "examples/bundles.rs"
