--- a/assets/prototypes/test-1.prototype.yaml
+++ b/assets/prototypes/test-1.prototype.yaml
@@ -3,8 +3,11 @@
 name: "Test 1"
 components:
   - type: foo::Person
-    value:
+    struct:
       name: "Inigo Montoya"
+      image:
+        type: "bevy_proto::handle::HandlePath<bevy_render::texture::image::Image>"
+        value: textures/sprite.png
   - type: foo::Ordered
     value:
       order: 1
