--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,10 @@ name = "bundles"
 path = "examples/bundles.rs"
 
 [[example]]
+name = "handles"
+path = "examples/handles.rs"
+
+[[example]]
 name = "attributes"
 path = "examples/attributes.rs"
 
