--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["assets/**/*", ".github/**/*"]
 
 [dependencies]
 bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
-bevy = { git = "https://github.com/MrGVSV/bevy", branch = "bevy_proto" }
+bevy = { git = "https://github.com/bevyengine/bevy" }
 serde = "1.0"
 typetag = "0.1"
 serde_yaml = { version = "0.8", optional = true }
@@ -23,9 +23,6 @@ thiserror = "1.0"
 parking_lot = "0.12"
 serde_ron = { version = "0.7", optional = true, package = "ron" }
 serde_json = { version = "1.0", optional = true }
-
-[dev-dependencies]
-bevy = { git = "https://github.com/MrGVSV/bevy", branch = "bevy_proto" }
 
 [features]
 default = ["analysis", "yaml"]
@@ -71,3 +68,6 @@ path = "examples/templates.rs"
 [[example]]
 name = "bench"
 path = "examples/bench.rs"
+
+[profile.release]
+debug = true
