--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,23 @@ authors = ["Gino Valente <gino.valente.code@gmail.com>"]
 description = "Create config files for entities in Bevy"
 repository = "https://github.com/MrGVSV/bevy_proto"
 license = "MIT OR Apache-2.0"
-keywords = ["bevy", "archetype", "config", "entity"]
+keywords = ["bevy", "archetype", "config", "entity", "prefab"]
 readme = "README.md"
 exclude = ["assets/**/*", ".github/**/*"]
 
 [dependencies]
 bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
 bevy = { git = "https://github.com/bevyengine/bevy" }
-serde = "1.0"
-typetag = "0.1"
-serde_yaml = { version = "0.8", optional = true }
-dyn-clone = "1.0"
-indexmap = "1.7"
+
+# Utility
 anyhow = "1.0"
-thiserror = "1.0"
+indexmap = "1.7"
 parking_lot = "0.12"
+thiserror = "1.0"
+
+# Serde
+serde = "1.0"
+serde_yaml = { version = "0.8", optional = true }
 serde_ron = { version = "0.7", optional = true, package = "ron" }
 serde_json = { version = "1.0", optional = true }
 
@@ -30,10 +32,16 @@ default = ["analysis", "yaml"]
 analysis = []
 # If enabled, panics when a dependency cycle is found, otherwise logs a warning
 no_cycles = ["analysis"]
-
+# If enabled, allows for prototypes defined in YAML
 yaml = ["serde_yaml"]
+# If enabled, allows for prototypes defined in JSON
 json = ["serde_json"]
+# If enabled, allows for prototypes defined in RON
 ron = ["serde_ron"]
+
+[[example]]
+name = "attributes"
+path = "examples/attributes.rs"
 
 [[example]]
 name = "basic"
@@ -41,25 +49,21 @@ path = "examples/basic.rs"
 required-features = ["json"]
 
 [[example]]
-name = "config"
-path = "examples/config.rs"
+name = "bench"
+path = "examples/bench.rs"
 
 [[example]]
 name = "bundles"
 path = "examples/bundles.rs"
 
 [[example]]
+name = "config"
+path = "examples/config.rs"
+
+[[example]]
 name = "handles"
 path = "examples/handles.rs"
 
 [[example]]
-name = "attributes"
-path = "examples/attributes.rs"
-
-[[example]]
 name = "templates"
 path = "examples/templates.rs"
-
-[[example]]
-name = "bench"
-path = "examples/bench.rs"
