--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ typetag = "0.2"
 serde_yaml = "0.9"
 dyn-clone = "1.0"
 indexmap = "1.9"
+crossbeam-channel = { version = "0.5", optional = true }
+notify = { version = "=5.0.0-pre.15", optional = true }
 
 [dev-dependencies]
 bevy = "0.8"
@@ -28,6 +30,8 @@ default = ["analysis"]
 analysis = []
 # If enabled, panics when a dependency cycle is found, otherwise logs a warning
 no_cycles = ["analysis"]
+# If enabled, allows for hot reloading
+hot_reloading = ["dep:crossbeam-channel", "dep:notify"]
 
 [[example]]
 name = "basic"
