--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,17 @@ exclude = ["assets/**/*", ".github/**/*"]
 
 [dependencies]
 bevy_proto_derive = { version = "0.2", path = "bevy_proto_derive" }
-bevy = { version = "0.8", default-features = false, features = ["bevy_asset"] }
+bevy = { version = "0.9", default-features = false, features = ["bevy_asset"] }
 serde = "1.0"
 typetag = "0.2"
 serde_yaml = "0.9"
 dyn-clone = "1.0"
 indexmap = "1.9"
 crossbeam-channel = { version = "0.5", optional = true }
-notify = { version = "=5.0.0-pre.15", optional = true }
+notify = { version = "5.0", optional = true }
 
 [dev-dependencies]
-bevy = "0.8"
-
+bevy = "0.9"
 [features]
 default = ["analysis"]
 # If enabled, analyses prototype dependencies and logging (or panicking if `no_cycles` is enabled) on error
