--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ serde_yaml = { version = "0.9", optional = true, default-features = false }
 ron = "0.8"
 bevy = "0.10.1"
 bevy_prototype_lyon = "0.8.0"
+trybuild = "1.0.71"
 
 [[example]]
 name = "basic_schematic"
@@ -110,3 +111,7 @@ required-features = ["ron", "auto_name"]
 name = "templates"
 path = "examples/templates.rs"
 required-features = ["ron", "auto_name", "custom_schematics", "bevy_sprite", "yaml"]
+
+[[test]]
+name = "compile_tests"
+path = "tests/compile_tests.rs"
