Add dependency dependencies

--- a/bevy_proto_backend/Cargo.toml
+++ b/bevy_proto_backend/Cargo.toml
@@ -33,21 +33,33 @@ bevy_animation = ["bevy/bevy_animation"]
 # Enables registrations for types available with Bevy's bevy_audio feature
 bevy_audio = ["bevy/bevy_audio"]
 # Enables registrations for types available with Bevy's bevy_core_pipeline feature
-bevy_core_pipeline = ["bevy/bevy_core_pipeline"]
+bevy_core_pipeline = ["bevy/bevy_core_pipeline", "bevy_render"]
 # Enables registrations for types available with Bevy's bevy_gltf feature
-bevy_gltf = ["bevy/bevy_gltf"]
+bevy_gltf = [
+    "bevy/bevy_gltf",
+    "bevy_core_pipeline",
+    "bevy_pbr",
+    "bevy_render",
+    "bevy_scene",
+]
 # Enables registrations for types available with Bevy's bevy_pbr feature
-bevy_pbr = ["bevy/bevy_pbr"]
+bevy_pbr = ["bevy/bevy_pbr", "bevy_core_pipeline"]
 # Enables registrations for types available with Bevy's bevy_render feature
 bevy_render = ["bevy/bevy_render"]
 # Enables registrations for types available with Bevy's bevy_scene feature
-bevy_scene = ["bevy/bevy_scene"]
+bevy_scene = ["bevy/bevy_scene", "bevy_render"]
 # Enables registrations for types available with Bevy's bevy_sprite feature
-bevy_sprite = ["bevy/bevy_sprite"]
+bevy_sprite = ["bevy/bevy_sprite", "bevy_render", "bevy_core_pipeline"]
 # Enables registrations for types available with Bevy's bevy_text feature
-bevy_text = ["bevy/bevy_text"]
+bevy_text = ["bevy/bevy_text", "bevy_sprite", "bevy_render"]
 # Enables registrations for types available with Bevy's bevy_ui feature
-bevy_ui = ["bevy/bevy_ui"]
+bevy_ui = [
+    "bevy/bevy_ui",
+    "bevy_sprite",
+    "bevy_render",
+    "bevy_core_pipeline",
+    "bevy_text",
+]
 
 [dependencies]
 bevy_proto_derive = { version = "0.3.1", path = "../bevy_proto_derive" }
