--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ bevy_ui = [
 
 [dependencies]
 bevy_proto_backend = { version = "0.4", path = "./bevy_proto_backend", default-features = false }
-bevy = { version = ">=0.11.0", default-features = false, features = ["bevy_asset"] }
+bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
 anyhow = "1.0"
 serde = "1.0"
 thiserror = "1.0"
