--- a/bevy_proto_derive/Cargo.toml
+++ b/bevy_proto_derive/Cargo.toml
@@ -22,5 +22,6 @@ syn = "2.0"
 quote = "1.0"
 proc-macro2 = "1.0"
 proc-macro-crate = "1.3"
+uuid = "1.3"
 optional-error = "0.1"
 to_phantom = "0.1"
